edits: fix navbar, nix learn button, extra spacing in footer/nav classes in p, fixed containers

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -18,7 +18,7 @@
  @import "bootstrap";
 
  body {
-  padding-top: 15px;
+  padding-top:70px;
 }
 
 div#footer {
